fix: hide scrollbar

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -186,8 +186,16 @@ html {
 body {
   height: 100%;
   position: relative;
-  overflow: hidden;
-  overflow-y: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  scrollbar-width: none;
 }
 
 select {
